画面リフレッシュをsocket経由で行うように修正

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -31,6 +31,11 @@
 	socket.on('connect', function(){
 	    console.log('connected');
 	});
+
+	socket.on('msg push', function( receiveData ){
+	    mediator.change();
+	});
+
 	qController.socket = socket;
 
     });
