--- a/views/test.ejs
+++ b/views/test.ejs
@@ -32,6 +32,7 @@
 
 	socket.on('changed', function( receiveData ){
 	    var tmp = receiveData.split(',');
+	    vController.setGraph( tmp[0], qManager.progressLabel( tmp[1] ), qManager.progressValue( tmp[1] ) );
 	    var word = qManager.getWordAtIndex( tmp[1] );
 	    vController.setWord(tmp[0], word, tmp[2]);
 	});
@@ -41,6 +42,8 @@
 	var word = qController.currentWord();
 	vController.setWord('a', word, 0);
 	vController.setWord('b', word, 0);
+	vController.setGraph( 'a', qManager.progressLabel( 0 ), 0 );
+	vController.setGraph( 'b', qManager.progressLabel( 0 ), 0 );
 
     });
 
@@ -57,7 +60,7 @@
 
 <h2>Team A</h2>
 <div class='team'>
-<div id='judge'></div>
+<div id='graph_a' class='graph'><span id='graphbar_a' class='graphbar'></span></div>
 <div id='word_word_a' class='word'></div>
 <div id='word_ruby_a' class='ruby'></div>
 </div>
@@ -65,7 +68,7 @@
 
 <h2>Team B</h2>
 <div class='team'>
-<div id='judge'></div>
+<div id='graph_b' class='graph'><span id='graphbar_b' class='graphbar'></span></div>
 <div id='word_word_b' class='word'></div>
 <div id='word_ruby_b' class='ruby'></div>
 </div>
