成績(秒数)の表記を [秒] に変更

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -84,7 +84,7 @@
 <div id='graph_b' class='graph'><span id='graphbar_b' class='graphbar'></span></div>
 <div id='word_word_b' class='word'></div>
 <div id='word_ruby_b' class='ruby'></div>
-<div id='finished_time_a'></div>
+<div id='finished_time_b'></div>
 </div>
 
   </body>
