--- a/views/test.ejs
+++ b/views/test.ejs
@@ -18,6 +18,9 @@
 	var timer = new PlayingTimer();
 
         var vController = new viewController();
+
+	vController.initView();
+
 	var qManager = new questionManager();
 
 	var qController = new questionController( qManager, vController );
@@ -27,8 +30,8 @@
 	    qController.judge( e.keyCode );
 	});	
 
-	$('#teamAButton').click( function(){ qController.setTeam( 'a' ) }  );
-	$('#teamBButton').click( function(){ qController.setTeam( 'b' ) }  );
+	$('#teamAButton').click( function(){ qController.setTeam( 'a' ); vController.playingView(); }  );
+	$('#teamBButton').click( function(){ qController.setTeam( 'b' ); vController.playingView(); }  );
 
 	var socket = io.connect('http://localhost:3000');
 	socket.on('connect', function(){
@@ -63,12 +66,15 @@
 
   <body>
     TEST Page.
-<div>
+
+<div id='teamSelector'>
     <label><input id='teamAButton' type='radio' value='a' name='team' >team A</label>
     <br>
     <label><input id='teamBButton' type='radio' value='b' name='team' >team B</label>
+
 </div>
 
+<div id='playingArea'>
 <div id='timerDiv'>0</div>
 <h2>Team A</h2>
 <div class='team'>
@@ -85,6 +91,7 @@
 <div id='word_word_b' class='word'></div>
 <div id='word_ruby_b' class='ruby'></div>
 <div id='finished_time_b'></div>
+</div>
 </div>
 
   </body>
