--- a/views/test.ejs
+++ b/views/test.ejs
@@ -77,6 +77,7 @@
 
 
 <div id='teamSelector'>
+<img src='/images/logo.png' alt='Battle Typing Logo'>
 <div id='teamSelectorInformation'>Select Team A or B! </div>
 <ul id='teamList'>
 <li>    <a href="#" class="css_btn_class" id='teamAButton'>Team A</a>
