--- a/views/test.ejs
+++ b/views/test.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/base.css' />
+    <link rel='stylesheet' href='/stylesheets/character.css' />
     <link rel='stylesheet' href='/stylesheets/button.css' />
     <script type='text/javascript' src='/socket.io/socket.io.js'></script>
     <script type='text/javascript' src='javascripts/jquery.js'></script>
@@ -76,8 +77,16 @@
   <body>
 
 
+<div id='baseContainer'>
+  
+
 <div id='teamSelector'>
+<img src='/images/character_1.png' alt='character 1' class='character' id='start_chara1'>
+<img src='/images/character_2.png' alt='character 2' class='character' id='start_chara2'>
+<img src='/images/rabbit.png' alt='rabbit' class='character' id='start_rabbit'>
+
 <img src='/images/logo.png' alt='Battle Typing Logo'>
+
 <div id='teamSelectorInformation'>Select Team A or B! </div>
 <ul id='teamList'>
 <li>    <a href="#" class="css_btn_class" id='teamAButton'>Team A</a>
@@ -86,9 +95,6 @@
 </div>
 
 
-
-<div id='baseContainer'>
-  
   <div id='playingArea'>
 
     <div id='playingHeader'>
