--- a/views/test.ejs
+++ b/views/test.ejs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/stylesheets/base.css' />
     <link rel='stylesheet' href='/stylesheets/character.css' />
     <link rel='stylesheet' href='/stylesheets/button.css' />
+    <link rel='stylesheet' href='/stylesheets/information.css' />
     <script type='text/javascript' src='/socket.io/socket.io.js'></script>
     <script type='text/javascript' src='javascripts/jquery.js'></script>
     <script type='text/javascript' src='javascripts/PlayingTimer.js'></script>
@@ -66,8 +67,8 @@
 	vController.setGraph( 'b', qManager.progressLabel( 0 ), 0 );
 
 	// develop view
-    //	qController.setTeam( 'a' );
-    //  vController.playingView();
+	qController.setTeam( 'a' );
+	vController.playingView();
 
     });
 
@@ -96,6 +97,15 @@
 
 
   <div id='playingArea'>
+    <div id='filter'></div>
+
+    <img src='/images/indicator.png' class='information' id='indicator'>
+    <img src='/images/opponents_for_a.png' class='information' id='opponents_for_a'>
+    <img src='/images/ruby_for_a.png' class='information' id='ruby_for_a'>
+    <img src='/images/timer.png' class='information' id='timer'>
+    <img src='/images/word_for_a.png' class='information' id='word_for_a'>
+
+    <img src='/images/enter_to_play.png' class='information' id='enter'>
 
     <div id='playingHeader'>
       <div id='graphs'>
