画像ファイル差し替え

--- a/public/stylesheets/information.css
+++ b/public/stylesheets/information.css
@@ -6,7 +6,7 @@ img.information{
     margin: 50px 0px 0px 100px;
 }
 
-#opponents_for_a{
+#opponents{
     margin: 240px 0px 0px 540px;
 }
 
@@ -14,11 +14,11 @@ img.information{
     margin: 50px 0px 0px 750px;
 }
 
-#word_for_a{
+#word_info{
     margin: 170px 0px 0px 100px;
 }
 
-#ruby_for_a{
+#ruby_info{
     margin: 270px 0px 0px 100px;
 }
 
