--- a/views/test.ejs
+++ b/views/test.ejs
@@ -67,7 +67,7 @@
 	vController.setGraph( 'b', qManager.progressLabel( 0 ), 0 );
 
 	// develop view
-	qController.setTeam( 'a' );
+	qController.setTeam( 'b' );
 	vController.playingView();
 
     });
@@ -100,10 +100,10 @@
     <div id='filter'></div>
 
     <img src='/images/indicator.png' class='information' id='indicator'>
-    <img src='/images/opponents_for_a.png' class='information' id='opponents_for_a'>
-    <img src='/images/ruby_for_a.png' class='information' id='ruby_for_a'>
+    <img src='/images/opponents.png' class='information' id='opponents'>
+    <img src='/images/ruby.png' class='information' id='ruby_info'>
     <img src='/images/timer.png' class='information' id='timer'>
-    <img src='/images/word_for_a.png' class='information' id='word_for_a'>
+    <img src='/images/word.png' class='information' id='word_info'>
 
     <img src='/images/enter_to_play.png' class='information' id='enter'>
 
