--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -9,7 +9,7 @@ body{
 #baseContainer{
     margin : 0 auto;
 /*    border : 1px solid gray; */
-    padding : 50px 0px;
+    padding : 10px 0px;
 }
 
 
@@ -47,40 +47,56 @@ div.ruby{
 
 div#playingHeader{
     width : 860px;
+    height : 120px;
     margin : 0px 20px;
     padding-top : 20px;
     padding-left : 20px;
     padding-bottom : 30px;
     margin-bottom : 30px;
-    height : 50px;
     background-color : white;
 }
 
 
 /* graph */
 div.graph{
+    float: left;
     border : 1px solid gray;
     padding : 0px;
 }
 
 div#graphs{
-    float : left;
+    height : 120px;
+}
+
+.graph_title{
+    width : 60px;
+    height: 40px;
+    float: left;
+    background-color: #eee;
+    line-height : 40px;
 }
 
 .graph{
     position: relative; /* IE is dumb */
-    width: 700px;
-    height: 2em;
+    height: 40px;
     line-height : 2em;
     padding : 0px;
     margin : 0px auto 0px 0px;
+    width : 500px;
+}
+
+.graphBlock{
+    margin : 10px 0px 20px 0px;
 }
 
 .graphbar{
     display : block;
     position : relative;
-    background-color : #f88;
+    width : 550px;
     color : black;
+    background-color : #f88;
+    height : 40px;
+    margin : 10px 0px 10px 0px;
 }
 
 .graph .graphbar span{
@@ -88,6 +104,15 @@ div#graphs{
     left : 20px;
 }
 
+.time_result{
+    float:left;
+    border : 1px solid #666;
+    width : 70px;
+    height: 40px;
+    margin-left : 40px;
+    line-height : 40px;
+    text-align : center;
+}
 
 
 /* team css */
@@ -124,11 +149,17 @@ div.team div.word{
 
 div#timerDiv{
     width : 120px;
-    height : 50px;
+    height : 90px;
+    margin-top : 10px;
+    margin-left : 30px;
     float : left;
     text-align : right;
     vertical-align : bottom;
     display : inline;
+    border : 4px double blue;
+    font-size : 50px;
+    text-align : center;
+    line-height : 90px;
 }
 
 div.word{
@@ -147,4 +178,9 @@ div#filter{
     filter: alpha(opacity=60);
     -moz-opacity:0.60;
     opacity:0.60;
+}
+
+img.icon{
+    position : absolute;
+    height : 40px;
 }
