--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -13,14 +13,6 @@ body{
 }
 
 
-div.word{
-    background-color : #aaf
-}
-
-div.ruby{
-    background-color : #afa;
-}
-
 #teamSelector{
     text-align : center;
     margin-left : auto;
@@ -53,7 +45,8 @@ div#playingHeader{
     padding-left : 20px;
     padding-bottom : 30px;
     margin-bottom : 30px;
-    background-color : white;
+    background-image : url("/images/metal_mesh.jpg");
+    background-size : 40%;
 }
 
 
@@ -62,6 +55,7 @@ div.graph{
     float: left;
     border : 1px solid gray;
     padding : 0px;
+    background-color: #ccc;
 }
 
 div#graphs{
@@ -112,6 +106,7 @@ div#graphs{
     margin-left : 40px;
     line-height : 40px;
     text-align : center;
+    background-color : #bbb;
 }
 
 
@@ -124,7 +119,7 @@ div#teams{
 
 div.team{
     width : 394px;
-    height : 300px;
+    height : 350px;
     float : left;
     border : 3px double gray;
     border-radius: 10px;        /* CSS3草案 */  
@@ -133,19 +128,21 @@ div.team{
     margin : 0px 20px;
     padding : 0px;
     background-color : white;
+    background-image : url("/images/metal.png");
+    background-size : 100%;
 }
 
 div.team h2{
+    font-size : 30px;
     width : 100%;
     text-align : center;
-    margin-left : auto;
-    margin-right : auto;
+    margin : 0px auto 0px auto;
+    color : white;
+    padding : 0px;
+    height : 60px;
+    line-height : 60px;
+    text-shadow: 3px 3px 1px black;
 }
-
-div.team div.word{
-    text-align : center;
-}
-
 
 div#timerDiv{
     width : 120px;
@@ -160,15 +157,23 @@ div#timerDiv{
     font-size : 40px;
     text-align : center;
     line-height : 90px;
+    background-color : #ccc;
+    font-family: Consolas, 'Courier New', Courier, Monaco, monospace;
 }
 
-div.word{
+div.word, div.ruby {
     height : 100px;
+    line-height : 100px;
+    background-image : url("/images/metal_flat.jpg");
+    color : white;
+    margin-bottom : 40px;
+    text-align : left;
+    font-size : 30px;
+    padding-left : 10px;
+    text-shadow: 2px 2px 1px black;
 }
 
-div.ruby{
-    height : 100px;
-}
+
 
 div#filter{
     position : absolute;
